Note containers have absolute position. No longer disappear behind sidebar

--- a/notes/core/static/style.css
+++ b/notes/core/static/style.css
@@ -25,7 +25,7 @@ body {
 
 .note-body {
     display: inline-block;
-    margin-left: 15%;
+    /* margin-left: 20%; */
 }
 
 .note {
@@ -54,9 +54,10 @@ body {
 }
 
 .note-container {
-    margin: 1rem;
+    position: absolute;
+    left: 25%;
     padding: 1rem;
-    max-width: 500px;
+    width: max-content;
     border: 1px solid black;
     border-radius: 10px;
 }
@@ -75,4 +76,8 @@ body {
 .edit {
     margin-top: 1rem;
     font-size: 10px;
+}
+
+.note-form {
+    font-size: 25px;
 }
